Fix spacings

--- a/src/app/sobre/sobre.module.scss
+++ b/src/app/sobre/sobre.module.scss
@@ -565,7 +565,7 @@ $black: #000000;
                     p:nth-child(2){
                         font-family: 'Text';
                         font-size: 1rem;
-                        margin-top: -1.25rem;
+                        margin-top: 1rem;
                         width: 150px;
                     }
         
